days/day-038/pod-dns-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-check
spec:
  containers:
  - name: test
    image: busybox
    command: ['sleep', '3600']
