days/day-038/pod-ndots-optimized.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ndots-optimized
spec:
  dnsPolicy: ClusterFirst
  dnsConfig:
    options:
    - name: ndots
      value: "2"
    - name: timeout
      value: "2"
    - name: attempts
      value: "2"
  containers:
  - name: test
    image: busybox
    command: ['sh', '-c', 'cat /etc/resolv.conf; sleep 3600']
