days/day-038/deploy-headless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless
spec:
  replicas: 3
  selector:
    matchLabels:
      app: headless
  template:
    metadata:
      labels:
        app: headless
    spec:
      containers:
      - name: app
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
spec:
  clusterIP: None
  selector:
    app: headless
  ports:
  - port: 80
